<resources>
    <string name="app_name">Localizacion_inalambrica</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_rastreador">Rastreador</string>
    <string name="menu_registro">Registro</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_app">LOGO APP</string>
    <string name="direccion_del_servidor">Direccion del servidor</string>
    <string name="boton_camara">Boton camara</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login">Login</string>
    <string name="loginsus">Exito al iniciar secion</string>
    <string name="loginfail">Fallo al iniciar secion</string>
    <string name="urlfail">La URL NO TIENE EL FORMATO ESPERADO</string>
    <string name="noconection">NO hay coneccion con el servidor</string>
    <string name="tituloServicioRastreoNotificacion">Rastreando Ubicacion</string>
    <string name="explicacion_permisos_ubicaion">Es necesario aceptar los permisos de ubicacion y bluetooth para el correcto funcionamiento del la aplicacion</string>
    <string name="botonCerrarNotificacion">Cerrar</string>
    <string name="botonContinuarNotificacion">Comezar Seguimento</string>
    <string name="FinalizarRastreo">Finalizar Rastreo</string>
    <string name="ComenzarRastreo">Comenzar Rastreo</string>
    <string name="botonserviddor">Acceder</string>
    <string name="Boton_cerrar_sesion">Cerrar sesion</string>
    <string name="registrar_nuevo_usuario">Registrar nuevo usuario</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="usuario_rastreador">Usuario Rastreador</string>
    <string name="correo_opcional">Correo opcional</string>
    <string name="registrar">Registrar</string>
    <string name="Error_Usuario_en_registro">Registro no disponible para usuarios</string>
    <string name="Error_Registro_usuario_muy_pequeño">Nombre de usuario muy pequeño</string>
    <string name="Error_Registro_contrasena_muy_pequeño">Contraseña muy pequeña</string>
    <string name="Exito_registro_usuario">"Se ha registrado correctamente al "</string>
    <string name="Error_Registrar">Error al registrar usuario</string>
    <string name="Error_Registro_Usuario_consultadatos">Error al registrar Usuario fallo Consulta</string>
    <string name="Error_Registro_Usuario_guardardatos"> Error al registrar Usuario fallo datosRelativos </string>

</resources>