<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registro.RegistroFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Texto_registro_de_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_nuevo_usuario"
            android:ems="15" />

        <EditText
            android:id="@+id/usuario_de_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre_de_usuario"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/contrasena_de_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword" />


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/selector_rastreador_de_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario_rastreador" />

        <EditText
            android:id="@+id/correo_de_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_opcional"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/button_de_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/registrar" />

        <TextView
            android:id="@+id/texto_confirmacion_de_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="invisible" />
    </LinearLayout>
</FrameLayout>